fix bug for background images on small screens

--- a/Sass/_base.scss
+++ b/Sass/_base.scss
@@ -166,17 +166,32 @@ html {
 // ------------------------- PROJECT SECTION ----------------------------
 main {
     .project-container {
-        background-image: url(../images/sand-lg.jpg);
-        background-attachment: fixed;
-        @include med-screens {
-            background-size: cover;     // testing mobile solution to background attachment-fixed
-        }
-        background-color: lightgray;
-        background-repeat: no-repeat;
         background-position-y: 100%;
         padding-bottom: 50px;
         position: relative;
+        &::before {
+            @include sm-screens-only {
+                content: "";
+                z-index: -1;
+                position: fixed;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                background-image: url(../images/sand-lg.jpg);
+                background-size: cover;
+                background-color: lightgray;
+            }
+        }
+        @include med-screens {
+            background-image: url(../images/sand-lg.jpg);
+            background-attachment: fixed;
+            background-size: cover;
+            background-color: lightgray;
+            background-repeat: no-repeat;
+        }
     }
+
     h1 {
         margin-top: 0;
         padding: 5vh 0;
